set Java version to 17
set Java version to 17